TEST_PROGRAMS/INVALID/07/invalid_goLiteArrayDeclIndexing.go
package main
var z[5+6] int
